HTTPRouteConfig.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: petstore
  labels:
    version: 1.0.6
spec:
  parentRefs:
  - name: eg
  hostnames:
  - www.example.com
  rules:
  - matches:
    # - path:
    #     type: PathPrefix
    #     value: /user/createWithArray
    # - path:
    #     type: PathPrefix
    #     value: /user/logout
    # - path:
    #     type: PathPrefix
    #     value: /user
    # - path:
    #     type: PathPrefix
    #     value: /pet
    # - path:
    #     type: PathPrefix
    #     value: /user/createWithList
    # - path:
    #     type: PathPrefix
    #     value: /pet/{petId}/uploadImage
    # - path:
    #     type: PathPrefix
    #     value: /store/order
    - path:
        type: PathPrefix
        value: /api/v3/pet
    backendRefs:
    - name: httpbin
      port: 80
      group: ""
      kind: Service
